<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/main_menu"
        android:title="@string/main_menu"
        app:showAsAction="always|withText">
        <menu>
            <item android:id="@+id/drum_submenu"
                android:title="@string/drum_submenu">
                <menu>
                    <item android:id="@+id/drum_1"
                        android:title="@string/drum_1" />
                    <item android:id="@+id/drum_2"
                        android:title="@string/drum_2" />
                </menu>
            </item>
            <item android:id="@+id/scratch_submenu"
                android:title="@string/scratch_submenu" >
                <menu>
                    <item android:id="@+id/scratch_1"
                        android:title="@string/scratch_1" />
                    <item android:id="@+id/scratch_2"
                        android:title="@string/scratch_2" />
                </menu>
            </item>
        </menu>
    </item>
</menu>