<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guideline_1"
        app:layout_constraintGuide_percent="0.60"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guideline_2"
        app:layout_constraintGuide_percent="0.75"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guideline_3"
        app:layout_constraintGuide_percent="0.90"
        android:orientation="horizontal" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guideline_1"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guideline_2"
        app:layout_constraintGuide_percent="0.66"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/album_image" />

    <ImageButton
        android:id="@+id/rewind_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@android:drawable/ic_media_rew"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guideline_1"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_3"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_2"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/rewind_back" />

    <ImageButton
        android:id="@+id/start_or_pause"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@android:drawable/ic_media_play"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_2"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guideline_2"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_guideline_1"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_3"
        android:contentDescription="@string/start_or_pause" />

    <ImageButton
        android:id="@+id/rewind_forward"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@android:drawable/ic_media_ff"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_2"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_guideline_2"
        android:contentDescription="@string/rewind_forward" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_3"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/song_title_and_band"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_1"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_2" />

</android.support.constraint.ConstraintLayout>